# MDS7104-ML

./: .gitignore  README.md  main.py  pyproject.toml
tareas/tarea1/: Musical_Instruments.jsonl  Tarea_1_MDS7104.ipynb
tareas/tarea2/: Tarea_2_MDS7104.ipynb  data_t2_p2.json
tareas/tarea3/: Tarea_3_MDS7104.ipynb
