[project]
name = "mds7104-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.12.0",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pre-commit>=4.5.1",
    "requests>=2.33.1",
    "ruff>=0.15.10",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors: errores de estilo (indentación, espacios, etc.)
    "W",   # pycodestyle warnings: advertencias de estilo menores
    "F",   # pyflakes: imports no usados, variables indefinidas, nombres duplicados
    "I",   # isort: orden y agrupación correcta de imports
    "B",   # flake8-bugbear: patrones propensos a bugs y malas prácticas
    "UP",  # pyupgrade: modernización automática de sintaxis a Python 3.12+
]
ignore = [
    "E501", # line-too-long: largo de línea (delegado a ruff-format)
]
